--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,325 @@
-h1 {
-  color: gray;
+/* 1)
+  A HTML törzsének állítsunk be fix háttérképet (ne gördüljön a szöveggel),
+  mely az x és y tengely mentén egyaránt ismétlődik
+*/
+body {
+  background-image: url("/public/img/pattern_background.jpg");
+  background-size: 180px;
+  background-repeat: repeat;
+  background-color: #cccccc;
+  background-attachment: fixed;
+  margin: 0 auto;
+
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+}
+
+*::selection {
+  background-color: black;
+  color: gold;
+}
+
+/* 2)
+ Elemtípusra vonatkozó szelektorok (osztály/ID nélkül) segítségével
+ oldjuk meg, hogy a főcím (h1) és alcím (h2) színe, háttérszíne s 
+ szövegdíszítése legyen egyforma
+*/
+h1, h2 {
+  color: gold;
+  text-decoration: underline;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+h1 span {
+  background-color: #232323;
+  padding: 5px;
+}
+
+/* 6)
+  Definiáljunk két különböző link típust, mely(ek)nek más és más a színe, szövegdíszítése
+  ha rámegyünk az egérrel, ha aktív, ha már meglátogattuk
+*/
+a.top {
+  color: white;
+  font-size: 22pt;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: underline;
+}
+
+a.top:hover {
+  text-decoration: none;
+}
+
+a.top:visited {
+  color: black;
+}
+
+a.gen {
+  color: gold;
+  font-size: 22pt;
+  font-weight: bold;
+}
+
+a.gen:hover {
+  font-weight: normal;
+  text-decoration: underline;
+}
+
+a.gen:visited {
+  color: goldenrod;
+}
+
+div.bottom {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+/* 3)
+  Definiáljunk (és használjunk a HTML oldalon) két különböző 
+  stílusú paragrafust (p). Használjunk olyan szelektort, ami 
+  az elemtípus és az osztályra is megkötést tesz.
+*/
+p.intro {
+  color: white;
+  font-weight: bold;
+  text-align: justify;
+  background-color: #6f7072;
+  margin: 0;
+  padding: 2% 10% 2% 10%;
+}
+
+p.interval {
+  background-color: #232323;
+  color: gold;
+  font-weight: bold;
+  text-align: center;
+  margin: 0;
+  padding: 2% 10% 2% 10%;
+}
+
+
+/* 4)
+  Általános stílusosztály (osztály, mely nincs ráhúzva egy elemtípusra)
+  segítségével oldjuk meg, hogy különböző HTML elemek stílusa (szín, 
+  betűtípus-család, betű vastagsága, szöveg díszítése) ugyanaz
+*/
+.goldfont {
+  color: gold;
+  font-weight: normal;
+  text-decoration: none;
+  text-align: justify;
+}
+
+
+section.awards {
+  color: gold;
+  font-size: 20pt;
+  background-color: #6f7072;
+  margin: 20px;
+  border: 3px solid gold;
+  padding: 1vh 5vw 1vh 5vw
+}
+
+/* 5)
+  Adjuk meg (kontextussal megadott szelektort használva) egy section elemben elhelyezkedő ol elem
+  stílusát (típus: római számok jelenjenek meg a sor elején, csökkenő sorrendben).
+*/
+
+section ol {
+  list-style-type: upper-roman;
+  color: gold;
+}
+
+table {
+  margin: 3% 5% 3% 5%;
+  width: 84%;
+  background-color: #6f7072;
+  color: gold;
+  border-collapse: collapse;
+  font-size: 20pt; 
+}
+
+th {
+  text-align: center;
+}
+
+table, th, td {
+  border: 3px solid #232323;
+  padding: 3px;
+}
+
+td.left {
+  text-align: left;
+}
+
+td.center {
+  text-align: center;
+}
+
+/* 9)
+  Flexbox segítségével készítünk egy kártyás nézetet, 
+  ahol egy kártya tartalmaz egy fix méretű képet,
+  szöveget s linket. Helyezzünk ilyen több kártyát egymás mellé
+
+  10)
+  Ha az oldalt kicsinyítjük, a kártyák automatikusan rendeződjenek
+  újra, hogy csak annyi látszodjon, amennyi belefér a képernyő szélességébe
+*/
+div.kategoria {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 70vw;
+  margin: auto;
+}
+
+div.generacio {
+  background-color: #232323;
+  width: 200px;
+  height: 320px;
+  box-shadow: 6px 6px 3px rgba(255, 215, 0, 0.5);
+  
+  text-align: center;
+  padding: 10px;
+  margin: 5px;
+}
+
+div.generacio img {
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
+}
+
+div.generacio a {
+  color: gold;
+  font-size: 22pt;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+}
+
+/*
+  Header
+*/
+header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: 35% 35% 30%;
+  background-color: #232323;
+  height: 19vh;
+}
+
+header img {
+  grid-row: 1;
+  grid-column: 2;
+  margin: auto;
+  height: 100%;
+}
+
+header p {
+  margin: auto;
+  grid-column: 2;
+  grid-row: 2;
+
+  padding-left: 6px;
+  font-size: 4.8vh;
+  color: gold;
+}
+
+nav {
+  grid-row: 3;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  background-color: gold;
+  height: 100%;
+  width: 100%;
+  margin-top: 10px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+nav a {
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 1vw 0 1vw;
+  font-size: 14pt;
+  text-decoration: none;
+  color: #232323;
+  font-weight: 600;
+  height: 100%;
+  
+}
+
+nav a:hover {
+  background-color: goldenrod;
+}
+
+nav img {
+  height: 75%;
+}
+
+
+/*
+  Footer
+*/
+footer {
+  margin-top: 20px;
+  color: gold;
+  text-align: center;
+  background-color: #232323;
+}
+
+
+div.desccontain {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: #6f7072;
+}
+
+div.desccontain h1 {
+  margin-block: 0;
+  padding: 5px;
+}
+
+div.desc {
+  display: none;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr auto;
+  background-color: #6f7072;
+  column-gap: 20px;
+  padding: 0px 20px 0px 20px;
+}
+
+
+div.desccontain:hover div.desc {
+  display: grid;
+}
+
+
+div.keret {
+  padding: 5px;
+  background-color: #232323;
+  border-top: 3px solid white;
+  border-bottom: 3px solid white;
+  text-align: center;
+}
+/* 7)
+  Definiáljunk egy olyan div stílust, mely be van keretezve szimpla vonallal. A szöveg legyen a keret
+  közepén (a behúzás–padding–minden irányban ugyanannyi). A keret két szélső része ne látszodjon
+*/
+div.keret h1 {
+  color: white;
+  text-decoration: none;
 }
