--- a/public/style.css
+++ b/public/style.css
@@ -13,77 +13,52 @@ header {
   background-color: black;
   font-size: 40pt;
   text-align: center;
+  margin-bottom: 2%;
 }
 
-header a,
-header a:visited,
-header a:hover {
+header > a,
+header > a:visited,
+header > a:hover {
   color: #dfdfff;
   text-decoration: none;
 }
 
-aside {
-  display: grid;
-
-  padding-top: 40pt;
-  text-align: center;
-  position: absolute;
-  width: 10vw;
-  min-width: 6em;
-  background-color: black;
-  height: 100%;
-}
-
-aside a {
-  color: #dfdfff;
-  text-decoration: none;
-}
-
-form.hwUpload {
-  /* background-color: blue;
-  padding: 2vw;
-  border-radius: 10px; */
-  margin: auto;
+nav {
+  display: flex;
   flex-wrap: wrap;
-  display: flex;
-  width: 50vw;
-  align-items: center;
   justify-content: center;
-}
+  align-items: center;
 
-form.hwUpload textarea {
-  resize: none;
-  background-color: black;
-  color: #dfdfff;
+  margin-top: 10px;
+  height: 40px;
+  background-color: #dfdfff;
+  text-align: center;
   width: 100%;
-  height: 12em;
-  margin-bottom: 20px;
 }
 
-form.hwUpload label {
-  margin-right: 10px;
-  margin-bottom: 20px;
+nav a,
+nav a:visited {
+  font-size: 12pt;
+  padding: 0 20px 0 20px;
+  color: #303040;
+  text-decoration: none;
 }
 
-form.hwUpload input,
-form.hwUpload button {
-  background-color: black;
-  color: #dfdfff;
-  margin-bottom: 20px;
+nav a:hover {
+  background-color: #aaaacc;
 }
 
-input#subjName {
-  width: 40em;
-}
-
-form.hwUpload div {
-  width: 100%;
+nav p {
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
-form.hwUpload button {
-  font-size: 14pt;
-  font-weight: 600;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 40px;
+
+  text-wrap: wrap;
+  width: 6em;
 }
