--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -65,7 +65,7 @@
             <% } else { %>
                 <h1>Nincs megjelenítendő tantárgy!</h1>
                 <% } %>
-
+                    <!-- Ha hiba van, ugyanide üzenettel -->
                     <% if (errorMsg) {%>
                         <p class="errormsg">
                             <%= errorMsg %>
