--- a/views/assignments.ejs
+++ b/views/assignments.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 
-<%- include('partials/head.ejs', { title: 'Online Napló' }) %>
+<%- include('partials/head.ejs', { title: 'Online Napló' , scripts: {} }) %>
 
     <body>
         <header>
