--- a/views/addSubject.ejs
+++ b/views/addSubject.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 
-<%- include('partials/head.ejs', { title: 'Tantárgy hozzáadása' }) %>
+<%- include('partials/head.ejs', { title: 'Tantárgy hozzáadása' , scripts: {} }) %>
 
     <body>
         <header>
