--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-<%- include('partials/head.ejs', { title: 'Hiba!' }) %>
+<%- include('partials/head.ejs', { title: 'Hiba!' , scripts: {} }) %>
 
     <body>
         <p>
