--- a/views/assignments.ejs
+++ b/views/assignments.ejs
@@ -4,90 +4,89 @@
 <%- include('partials/head.ejs', { title: 'Online Napló' , scripts: [ 'delAssignment.js' ] }) %>
 
     <body>
-        <header>
-            <a href="index.html">Online Napló</a>
-            <nav>
-                <a href="addSubject.html">
-                    <p>Tantárgy hozzáadása</p>
-                </a>
-            </nav>
-        </header>
+        <%- include('partials/header.ejs', {username, role}) %>
 
-        <% if (assignments.length) { %>
-            <h1>Feladatok</h1>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Feladat ID</th>
-                        <th>Tantárgy ID</th>
-                        <th>Feladat Leírása</th>
-                        <th>Filenév</th>
-                        <th>Határidő</th>
-                        <th>Törlés</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% assignments.forEach((assignment)=> { %>
-
+            <% if (assignments.length) { %>
+                <h1>Feladatok</h1>
+                <table>
+                    <thead>
                         <tr>
-                            <td>
-                                <%= assignment.AID %>
-                            </td>
-                            <td>
-                                <%= assignment.SubjID %>
-                            </td>
-                            <td>
-                                <%= assignment.ADesc %>
-                            </td>
-                            <td>
-                                <%= assignment.FileName %>
-                            </td>
-                            <td>
-                                <%= assignment.DueDate %>
-                            </td>
-                            <td class="delAssignment">
-                                Törlés!
-                            </td>
+                            <th>Feladat ID</th>
+                            <th>Tantárgy ID</th>
+                            <th>Feladat Leírása</th>
+                            <th>Filenév</th>
+                            <th>Határidő</th>
+                            <% if (username && (username===owner)) { %>
+                                <th>Törlés</th>
+                                <% } %>
                         </tr>
+                    </thead>
+                    <tbody>
+                        <% assignments.forEach((assignment)=> { %>
 
-                        <% }) %>
+                            <tr>
+                                <td>
+                                    <%= assignment.AID %>
+                                </td>
+                                <td>
+                                    <%= assignment.SubjID %>
+                                </td>
+                                <td>
+                                    <%= assignment.ADesc %>
+                                </td>
+                                <td>
+                                    <%= assignment.FileName %>
+                                </td>
+                                <td>
+                                    <%= assignment.DueDate %>
+                                </td>
+                                <% if (username && (username===owner)) { %>
+                                    <td class="delAssignment">
+                                        Törlés!
+                                    </td>
+                                    <% } %>
+                            </tr>
 
-                </tbody>
-            </table>
-            <% } else { %>
-                <h1>Nincs megjelenítendő feladat!</h1>
-                <% } %>
+                            <% }) %>
 
-                    <form class="form" action="/addHomework" method="POST" enctype="multipart/form-data">
-                        <p class="title">Feladat létrehozása</p>
-                        <!-- <div class="input-container ic1">
+                    </tbody>
+                </table>
+                <% } else { %>
+                    <h1>Nincs megjelenítendő feladat!</h1>
+                    <% } %>
+
+                        <% if (username && (username===owner)) { %>
+                            <form class="form" action="/addHomework" method="POST" enctype="multipart/form-data">
+                                <p class="title">Feladat létrehozása</p>
+                                <!-- <div class="input-container ic1">
                             <input type="text" class="input" name="hwSubject" id="hwSubject" placeholder=" " required>
                             <div class="cut"></div>
                             <label for="hwSubject" class="placeholder">Tantárgy ID</label>
                         </div> -->
-                        <input type="hidden" name="hwSubject" value="<%= activeID %>">
-                        <div class="textarea ic2">
-                            <textarea name="hwDesc" id="hwDesc" class="input input-area" placeholder=" "
-                                required></textarea>
-                            <div class="cut"></div>
-                            <label for="hwDesc" class="placeholder">Feladat leírása</label>
-                        </div>
-                        <p class="subtitle">Határidő:</p>
-                        <div class="input-container">
-                            <input type="date" class="input" name="dueDate" id="dueDate" required>
-                        </div>
-                        <p class="subtitle">Specifikáció:</p>
-                        <div class="input-container">
-                            <input type="file" class="input" accept="application/pdf" name="hwFile" id="hwFile">
-                        </div>
-                        <button name="submitButton" class="submit" type="submit">Feltölt!</button>
-                    </form>
-                    <!-- Ha hiba van, ugyanide üzenettel -->
-                    <% if (errorMsg) {%>
-                        <p class="errormsg">
-                            <%= errorMsg %>
-                        </p>
-                        <% } %>
+                                <input type="hidden" name="hwSubject" value="<%= activeID %>">
+                                <div class="textarea ic2">
+                                    <textarea name="hwDesc" id="hwDesc" class="input input-area" placeholder=" "
+                                        required></textarea>
+                                    <div class="cut"></div>
+                                    <label for="hwDesc" class="placeholder">Feladat leírása</label>
+                                </div>
+                                <p class="subtitle">Határidő:</p>
+                                <div class="input-container">
+                                    <input type="date" class="input" name="dueDate" id="dueDate" required>
+                                </div>
+                                <p class="subtitle">Specifikáció:</p>
+                                <div class="input-container">
+                                    <input type="file" class="input" accept="application/pdf" name="hwFile" id="hwFile">
+                                </div>
+                                <button name="submitButton" class="submit" type="submit">Feltölt!</button>
+                            </form>
+                            <% } %>
+                                <!-- Ha hiba van, ugyanide üzenettel -->
+                                <% if (errorMsg) {%>
+                                    <p class="errormsg">
+                                        <%= errorMsg %>
+                                    </p>
+                                    <% } %>
 
     </body>
 
